  * debian/control: Bump Standards-Version to 4.6.2 (#4085)
  * debian/control: Remove inaccurate Vcs and Homepage info (#4085)
  * debian/control: Depend on kfocus-power-bin instead of kfocus-power-scripts
    (#4085)
  * debian/copyright: Update copyright date (#4085)
  * etc/*: Store config in usr/lib/kfocus/conf and symlink to the appropriate
    locations (#4085)

 -- Aaron Rainbolt <arainbolt@kfocus.org>  Tue, 30 Apr 2024 17:13:10 -0500

kfocus-settings (24.04.1~beta4) noble; urgency=medium

  [ Michael Mikowski ]
  * Move plasma-welcomerc to kfocus-settings. (#4085)

 -- Aaron Rainbolt <arainbolt@kfocus.org>  Mon, 29 Apr 2024 22:37:46 -0500

kfocus-settings (24.04.1~beta3) noble; urgency=medium

  * Adjust Firefox launchers to point to the apt package's .desktop file.

 -- Aaron Rainbolt <arainbolt@kfocus.org>  Fri, 12 Apr 2024 18:00:59 -0500

kfocus-settings (24.04.1~beta2) noble; urgency=medium

  * Keep systemd from creating BTRFS subvolumes at /var/lib/machines and
    /var/lib/portables. (#4013)

 -- Aaron Rainbolt <arainbolt@kfocus.org>  Tue, 09 Apr 2024 21:48:55 -0500

kfocus-settings (24.04.1~beta1) noble; urgency=medium

  * Drop transitional package kfocus-001-settings. (#4085)
  * Drop Ubiquity configuration files. (#4085)

 -- Aaron Rainbolt <arainbolt@kfocus.org>  Sun, 07 Apr 2024 17:04:56 -0500

kfocus-settings (22.04.21) jammy; urgency=medium

  * kfocus-timeout-override.conf: Shorten timeouts for hang-prone jobs (#2233)

 -- Michael S. Mikowski <support@kfocus.org>  Thu, 07 Mar 2024 11:37:43 -0800

kfocus-settings (22.04.20) jammy; urgency=medium

  * skel/.config: Adjust preferences to fix chrome crash (#4058)

 -- Michael S. Mikowski <support@kfocus.org>  Wed, 07 Feb 2024 22:02:28 -0800

kfocus-settings (22.04.19) jammy; urgency=medium

  * postinst: Update command query handling (#3940)

 -- Michael S. Mikowski <support@kfocus.org>  Tue, 05 Dec 2023 19:44:11 -0800

kfocus-settings (22.04.18) jammy; urgency=medium
