@@ -1,12 +1,0 @@
-#!/usr/bin/make -f
-
-all:
-	@echo "Nothing to build, call 'make install' instead."
-
-install:
-	mkdir -pv $(DESTDIR)
-	cp -a etc usr $(DESTDIR)/.
-	# remove some remaining files
-	find $(DESTDIR) -type f -iname "*.in" | xargs rm -f
-
-# vim:ts=4
