@@ -8,6 +8,7 @@ kfocus-settings (24.04.1~beta5) UNRELEASED; urgency=medium
   * debian/copyright: Update copyright date (#4085)
   * etc/*: Store config in usr/lib/kfocus/conf and symlink to the appropriate
     locations (#4085)
+  * Makefile: Remove obsolete Makefile. (#4085)
 
  -- Aaron Rainbolt <arainbolt@kfocus.org>  Tue, 30 Apr 2024 17:13:10 -0500
 
